encoding fixes, cleaner code, better truncating, stylefix

--- a/inc/css/styles.css
+++ b/inc/css/styles.css
@@ -104,6 +104,7 @@ header li:hover,
     line-height:1.1em;
 	margin: 0 0 .5rem;
     word-wrap: break-word;
+    min-height:2em;
 }
 .headline .favicon{
 	width: 2em; height:auto;
